--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-native": "~0.55.2",
     "react-navigation": "^2.2.4",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
+    "redux-persist-expo-securestore": "^1.0.0"
   }
 }
