--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "expo": "^27.0.1",
     "lodash": "^4.17.10",
+    "native-base": "^2.5.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-easy-grid": "^0.1.17",
     "react-navigation": "^2.2.4",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
